# LSPlant-build

.github/workflows/: android.yml
gradle/: libs.versions.toml
module/: build.gradle
module/jni/: Android.mk  CMakeLists.txt  main.cpp
